# OrnekProje

./: pyproject.toml
claims_ml/src/data_loader/: data_loader.py  error_messages.py  exceptions.py
frigg_ml/src/data_preprocessing/: __init__.py  data_preprocessor.py  load_config.py
tests/: conftest.py
tests/data_loader/: test_data_loader.py
tests/data_preprocessing/: conftest.py  test_data_preprocessor.py
tests/test_datasets/: test_config.yaml
